# acadyne

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml  requirements.txt  setup.py
.github/workflows/: acadyne-package.yml
acadyne/: .gitignore  __init__.py  requirements.txt
acadyne/ejemplos/: test_dynamic_tensor.py  test_settensor_extend.py
acadyne/tensores/: __init__.py  dynamic_tensor.py  lorentz_tensor.py  set_tensor.py  tensor_bionico.py
acadyne/test/: test_dynamic_tensor.py  test_fibonacci.py  test_funcionalidades.py  test_general.py  test_leyes_de_morgan.py  test_lorentz_transformation.py  test_set_tensor.py  test_set_tensor_2.py  test_sir_model.py  test_solve_equations.py
docs/: documentacion_set_tensor.md  dsdsd
