[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "acadyne"
version = "0.2.5"  # Incrementa la versión aquí
description = "Una biblioteca biónica para la manipulación de tensores numéricos y simbólicos, facilitando cálculos avanzados en computación científica."
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Jose Fabian Soltero Escobar", email = "acadyne@gmail.com"},
]
keywords = ["tensor", "computation", "symbolic", "mathematics", "simulation", "bionic"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Mathematics",
]
dependencies = [
    "numpy>=1.21",
    "sympy>=1.8",
    "scipy>=1.5",
    "pandas>=1.0",
    "matplotlib>=3.0",
]
requires-python = ">=3.7"

[project.urls]
homepage = "https://github.com/acadyne/acadyne"
repository = "https://github.com/acadyne/acadyne"
documentation = "https://github.com/acadyne/acadyne/wiki"

[project.optional-dependencies]
testing = [
    "pytest",
    "pytest-cov",
    "flake8",
]
